escrevi os títulos da navbar, mas ainda falta fazer o css dela

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="divnav borda"></div>
+    <div class="divnav borda">
+        <div class="image"><img src="" alt="" srcset=""></div>
+        <h2 class="h2nav">Página Inicial</h2>
+        <h2 class="h2nav">Quem Somos</h2>
+        <h2 class="h2nav">Cursos</h2>
+        <h2 class="h2nav">Login</h2>
+    </div>
 
-    <main class="main borda2"></main>
-
-
+    <main class="main borda2">
+<div class="titulo borda"><h1 class="h1titulo">Escola Municipal De Artes de Sinop</h1></div>
+</main>
     <script src="./js/index.js"></script>
 </body>
 </html>
