passando uma parte da API e ajustando a navbar para terminar de fazer no curso

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,14 +10,15 @@
 
 <body>
     <header id="cab" class="">
-        <div id="menu" class="borda">
-            <div class="image borda" id="titulo">
+        <div id="menu" class="">
+            <div class="image " id="titulo">
                 <img class="logoEMA" src="./assets/logo_EMA.png" alt="" srcset="">
             </div>
-            <div class="pages_nav borda"><a class="topnav borda" href="./">Página Inicial</a>
-                <a class="topnav borda" href="./">Quem Somos</a>
+            <div id="espaconavbar"></div>
+            <div class="pages_nav "><a class="topnav " href="./">Página Inicial</a>
+                <a class="topnav " href="./">Quem Somos</a>
                 <div class="dropdown">
-                    <span class="topnav borda">Cursos</span>
+                    <span class="topnav ">Cursos</span>
                     <div class="dropdown-content">
                         <a href="./informatica.html" class="cursos">Informática</a><br>
                         <a href="./pirotecnia.html" class="cursos">Pirotecnia</a><br>
@@ -28,7 +29,7 @@
                         <a href="./fanfarra.html" class="cursos">Fanfarra</a><br>
                     </div>
                 </div>
-                <a class="topnav borda" href="./">Login</a>
+                <a class="topnav " href="./">Login</a>
             </div>
         </div>
     </div>
