mexendo no front, criando a criar conta e o login, também ajustes na index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <header id="cab" class="">
-        <div id="menu" class="">
-            <div class="image " id="titulo">
+    <header id="cab" class="borda">
+        <div id="menu" class="borda">
+            <div class="image" id="titulo">
                 <img class="logoEMA" src="./assets/logo_EMA.png" alt="" srcset="">
             </div>
-            <div id="espaconavbar"></div>
-            <div class="pages_nav "><a class="topnav " href="./">Página Inicial</a>
+            <div id="espaconavbar" class=""></div>
+            <div class="pages_nav"><a class="topnav" href="./">Página Inicial</a>
                 <a class="topnav " href="./">Quem Somos</a>
                 <div class="dropdown">
                     <span class="topnav ">Cursos</span>
@@ -34,7 +34,7 @@
         </div>
     </div>
 </header>
-    <main class="main ">
+    <main class="main borda">
         <div class="titulo ">
             <h1 class="h1titulo">Escola Municipal De Artes de Sinop</h1>
         </div>
