--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto Próprio</title>
+    <link rel="stylesheet" href="../css/login.css">
 </head>
+
 <body>
-    
+    <main id="main">
+        <section id="section" class="2">
+            <img id="image" src="../assets/logo_EMA.png" alt="" srcset="">
+            <div id="externalcontent" class="">
+                <div id="internalcontent" class="">
+                    <div class="divinput">
+                        <label for="email" class="labelcustom">E-mail:</label>
+                        <input type="text" name="email" id="email" class="inputcustom">
+                    </div>
+                    <div class="divinput" id="Senha">
+                        <label for="password" class="labelcustom">Senha:</label>
+                        <input type="password" name="password" id="password" class="inputcustom">
+                    </div>
+                </div>
+                    <div id="divbuttonsandsocialmedia" class="">
+                        <div id="divbuttons" class="2">
+                            <button id="btnsubmit" type="submit" onclick="login(event)">Login</button>
+                            <button id="btnsubmit" type="submit" onclick="criarconta()">Criar Conta</button>
+                        </div>
+                        <div id="divsocialmedia" class="2">
+                            <a href="https://www.instagram.com/" class="asocialmedia "><img src="./assets/instagram_image.avif" alt="" class="imgsocialmedia"></a>
+                            <a href="https://www.facebook.com/" class="asocialmedia "><img src="./assets/Facebook_logo_(square).png" alt="" class="imgsocialmedia"></a>
+                            <a href="https://www.youtube.com/" class="asocialmedia "><img src="./assets/youtube_logo_square.png" alt="" class="imgsocialmedia"></a>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
+<script src="../js/login.js"></script>
+<script src="../router.js"></script>
 </body>
+
 </html>
