ajustando a navbar para ficar responsiva e mais bonita

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,12 +9,11 @@
 </head>
 
 <body>
-    <header id="cab" class="borda">
-        <div id="menu" class="borda">
+    <header id="cab" class="">
+        <div id="menu" class="">
             <div class="image" id="titulo">
                 <img class="logoEMA" src="./assets/logo_EMA.png" alt="" srcset="">
             </div>
-            <div id="espaconavbar" class=""></div>
             <div class="pages_nav"><a class="topnav" href="./">Página Inicial</a>
                 <a class="topnav " href="./">Quem Somos</a>
                 <div class="dropdown">
@@ -29,12 +28,12 @@
                         <a href="./fanfarra.html" class="cursos">Fanfarra</a><br>
                     </div>
                 </div>
-                <a class="topnav " href="./">Login</a>
+                <a class="topnav " href="./pages/login.html">Login</a>
             </div>
         </div>
     </div>
 </header>
-    <main class="main borda">
+    <main class="main">
         <div class="titulo ">
             <h1 class="h1titulo">Escola Municipal De Artes de Sinop</h1>
         </div>
