ajustando a página inicial

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -11,7 +11,9 @@
 <body>
     <main id="main">
         <section id="section" class="2">
-            <img id="image" src="../assets/logo_EMA.png" alt="" srcset="">
+            <div class="imagediv ">
+                <img id="image" src="../assets/logo_EMA.png" alt="" srcset="">
+            </div>
             <div id="externalcontent" class="">
                 <div id="internalcontent" class="">
                     <div class="divinput">
@@ -24,7 +26,7 @@
                     </div>
                 </div>
                     <div id="divbuttonsandsocialmedia" class="">
-                        <div id="divbuttons" class="2">
+                        <div id="divbuttons" class="">
                             <button id="btnsubmit" type="submit" onclick="login(event)">Login</button>
                             <button id="btnsubmit" type="submit" onclick="criarconta()">Criar Conta</button>
                         </div>
