--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,11 @@
 <body>
     <header id="cab" class="">
         <div id="menu" class="">
-            <div class="image" id="titulo">
-                <img class="logoEMA" src="./assets/logo_EMA.png" alt="" srcset="">
+            <div class="image " id="titulo">
+                <img class="logoEMA " src="./assets/logo_EMA.png" alt="" srcset="">
             </div>
-            <div class="pages_nav"><a class="topnav" href="./">Página Inicial</a>
-                <a class="topnav " href="./">Quem Somos</a>
+            <div class="pages_nav "><a class="topnav" href="./">Página Inicial</a>
+                <a class="topnav " href="./pages/QuemSomos.html">Quem Somos</a>
                 <div class="dropdown">
                     <span class="topnav ">Cursos</span>
                     <div class="dropdown-content">
@@ -31,13 +31,35 @@
                 <a class="topnav " href="./pages/login.html">Login</a>
             </div>
         </div>
-    </div>
-</header>
-    <main class="main">
-        <div class="titulo ">
-            <h1 class="h1titulo">Escola Municipal De Artes de Sinop</h1>
         </div>
+    </header>
+    <main class="main">
+        <div class="divTextImage" id="div2">
+            <img id="image2" class="image" src="./assets/2image.jpg" alt="" srcset="">
+            <div class="TitleAndParagraph">
+                <h1 class="h1titulo">Escola Municipal De Artes</h1>
+                <p class="paragraphEMA">A Escola Municipal de Artes Viviane Malheiros Dal’Berto (EMA) em Sinop, Mato
+                    Grosso,
+                    é uma instituição dedicada ao ensino gratuito de diversas formas de arte. Atualmente, a escola
+                    atende
+                    mais de 500 alunos de todas as idades, oferecendo cursos em áreas como desenho, escaleta, flauta,
+                    balé,
+                    teclado, pirografia, musicalização, banda rudimentar, dança de salão e saxofone</p>
+            </div>
+        </div>
+        <div class="divTextImage " id="div1">
+            <div class="TitleAndParagraph">
+                <h1 class="h1titulo">2º titulo</h1>
+                <p class="paragraphEMA">2º parágrafo</p>
+            </div>
+            <img id="imagefront" class="image" src="./assets/frontEMA.jpg" alt="" srcset="">
+        </div>
+        <iframe id="maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.743283087342!2d-55.49900209064133!3d-11.853234738276514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93a77fff298756f7%3A0xf52a77552b47f94!2sEscola%20Municipal%20de%20Artes%20-%20EMA!5e0!3m2!1spt-BR!2sbr!4v1727396532749!5m2!1spt-BR!2sbr"
+            width="80%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
+    <footer><h3 class="textFooter">Entre em contato conosco: (66) 99658-2548</h3> <h3 class="textfooter">Nos siga no Facebook: <a href="https://www.facebook.com/escoladeartessinop/?locale=pt_BR"><img src="./assets/facebook.png" id="imageFacebook" alt="" srcset=""></a></h3></footer>
     <script src="./js/index.js"></script>
 </body>
 
