mexendo no index.html para ajustar os cursos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,13 +19,22 @@
                 <div class="dropdown">
                     <span class="topnav ">Cursos</span>
                     <div class="dropdown-content">
-                        <a href="./informatica.html" class="cursos">Informática</a><br>
-                        <a href="./pirotecnia.html" class="cursos">Pirotecnia</a><br>
-                        <a href="./pintura.html" class="cursos">Pintura</a><br>
-                        <a href="./ballet.html" class="cursos">Ballet</a><br>
-                        <a href="./violao.html" class="cursos">Violão</a><br>
-                        <a href="./teclado.html" class="cursos">Teclado</a><br>
-                        <a href="./fanfarra.html" class="cursos">Fanfarra</a><br>
+                        <a href="./pages/cursos/ballet.html" class="cursos">Ballet</a><br>
+                        <a href="./pages/cursos/banda_musical.html" class="cursos">Banda Musical</a><br>
+                        <a href="./pages/cursos/banda_rudimental.html" class="cursos">Banda Rudimental</a><br>
+                        <a href="./pages/cursos/cavaquinho.html" class="cursos">Cavaquinho</a><br>
+                        <a href="./pages/cursos/conversacao_japonesa.html" class="cursos">Conversação Japonesa</a><br>
+                        <a href="./pages/cursos/coral_adulto.html" class="cursos">Coral Adulto</a><br>
+                        <a href="./pages/cursos/danca_do_ventre.html" class="cursos">Dancça do Ventre</a><br>
+                        <a href="./pages/cursos/desenho.html" class="cursos">Desenho</a><br>
+                        <a href="./pages/cursos/espanhol.html" class="cursos">Espanhol</a><br>
+                        <a href="./pages/cursos/flauta_doce.html" class="cursos">Flauta Doce</a><br>
+                        <a href="./pages/cursos/musicalizacao.html" class="cursos">Musicalização</a><br>
+                        <a href="./pages/cursos/percursao.html" class="cursos">Percursão</a><br>
+                        <a href="./pages/cursos/pirografia.html" class="cursos">Pirografia</a><br>
+                        <a href="./pages/cursos/teclado.html" class="cursos">Teclado</a><br>
+                        <a href="./pages/cursos/violao.html" class="cursos">Violão</a><br>
+                        <a href="./pages/cursos/zumba.html" class="cursos">Zumba</a><br>
                     </div>
                 </div>
                 <a class="topnav " href="./pages/login.html">Login</a>
@@ -59,7 +68,12 @@
             width="80%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
-    <footer><h3 class="textFooter">Entre em contato conosco: (66) 99658-2548</h3> <h3 class="textfooter">Nos siga no Facebook: <a href="https://www.facebook.com/escoladeartessinop/?locale=pt_BR"><img src="./assets/facebook.png" id="imageFacebook" alt="" srcset=""></a></h3></footer>
+    <footer>
+        <h3 class="textFooter">Entre em contato conosco: (66) 99658-2548</h3>
+        <h3 class="textfooter ">Nos siga no Facebook: &nbsp;<a id="facebookEMA"
+                href="https://www.facebook.com/escoladeartessinop/?locale=pt_BR" target="_blank"> escoladeartessinop</a>
+        </h3>
+    </footer>
     <script src="./js/index.js"></script>
 </body>
 
