--- a/frontend/pages/QuemSomos.html
+++ b/frontend/pages/QuemSomos.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quem Somos</title>
+    <title>Quem somos</title>
     <link rel="stylesheet" href="../css/QuemSomos.css">
 </head>
-<body>
-    <h1>Hello World</h1>
 
+<body>
+    <div>
+        <header id="cab" class="">
+            <div id="titulo" class="">
+                <h1 class="quemsomos">QUEM SOMOS</h1>
+            </div>
+            <div id="menu" class=" ">
+                <a class="topnav " href="../index.html">Home</a>
+                <a class="topnav " href="./QuemSomos.html">Quem Somos</a>
+                <a class="topnav " href="./Equipe.html">Equipe</a>
+                <div class="dropdown">
+                    <span class="topnav">Projetos</span>
+                    <div class="dropdown-content">
+                        <a href="./projetos-concluidos.html" class="projetos">Projetos Concluidos</a><br>
+                        <a href="./projetos-em-andamento.html" class="projetos">Projetos em andamento</a><br>
+                        <a href="./projetos-futuros.html" class="projetos">Projetos Futuros</a>
+                    </div>
+                </div>
+                <a class="topnav " href="../index.html">Sair</a>
+            </div>
+        </header>
+    </div>
+    <div id="caixas">
+        <div class="caixatexto">
+            <h2 class="titulos">O ínicio</h2>
+            <p class="textos">Você sabia que a Caloi chegou aqui no Brasil no século XIX? Nossa história se confunde com
+                a história da bicicleta no País. Imagine quanta coisa temos para contar.</p>
+        </div>
+
+        <div class="caixatexto">
+            <h2 class="titulos">1945</h2>
+            <p class="textos">A dificuldade de importar peças na época da Segunda Guerra fez com que a Caloi desse
+                início à sua produção nacional. Neste ano, foi inaugurada a primeira fábrica de bicicletas do Brasil, no
+                bairro paulistano do Brooklin.</p>
+        </div>
+        <div class="caixatexto">
+            <h2 class="titulos">1989</h2>
+            <p class="textos">Em 89, chegou ao mercado a Caloi Mountain Bike 18, a primeira feita especialmente para a
+                prática do esporte que ganhou o coração do brasileiro.</p>
+        </div>
+    </div>
+    <footer id="footer">
+        <h3>@ 2024 Leitzke, Gabriel. All rights reserved.</h3>
+    </footer>
 
     <script src="../js/QuemSomos.js"></script>
 </body>
+
 </html>
