ajustando a página quem somos e a página de login além de colocar o login para os administradores lá no footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,13 +19,13 @@
                 <div class="dropdown">
                     <span class="topnav ">Cursos</span>
                     <div class="dropdown-content">
-                        <a href="./pages/cursos/ballet.html" class="cursos">Ballet</a><br>
+                        <a href="./pages/cursos/ballet.html" class="cursos">Ballet (7 a 10 anos)</a><br>
                         <a href="./pages/cursos/banda_musical.html" class="cursos">Banda Musical</a><br>
                         <a href="./pages/cursos/banda_rudimental.html" class="cursos">Banda Rudimental</a><br>
                         <a href="./pages/cursos/cavaquinho.html" class="cursos">Cavaquinho</a><br>
                         <a href="./pages/cursos/conversacao_japonesa.html" class="cursos">Conversação Japonesa</a><br>
                         <a href="./pages/cursos/coral_adulto.html" class="cursos">Coral Adulto</a><br>
-                        <a href="./pages/cursos/danca_do_ventre.html" class="cursos">Dancça do Ventre</a><br>
+                        <a href="./pages/cursos/danca_do_ventre.html" class="cursos">Dança do Ventre</a><br>
                         <a href="./pages/cursos/desenho.html" class="cursos">Desenho</a><br>
                         <a href="./pages/cursos/espanhol.html" class="cursos">Espanhol</a><br>
                         <a href="./pages/cursos/flauta_doce.html" class="cursos">Flauta Doce</a><br>
@@ -37,7 +37,6 @@
                         <a href="./pages/cursos/zumba.html" class="cursos">Zumba</a><br>
                     </div>
                 </div>
-                <a class="topnav " href="./pages/login.html">Login</a>
             </div>
         </div>
         </div>
@@ -65,14 +64,15 @@
         </div>
         <iframe id="maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.743283087342!2d-55.49900209064133!3d-11.853234738276514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93a77fff298756f7%3A0xf52a77552b47f94!2sEscola%20Municipal%20de%20Artes%20-%20EMA!5e0!3m2!1spt-BR!2sbr!4v1727396532749!5m2!1spt-BR!2sbr"
-            width="80%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+            width="30%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <h3 class="textFooter">Entre em contato conosco: (66) 99658-2548</h3>
         <h3 class="textfooter ">Nos siga no Facebook: &nbsp;<a id="facebookEMA"
-                href="https://www.facebook.com/escoladeartessinop/?locale=pt_BR" target="_blank"> escoladeartessinop</a>
+                href="https://www.facebook.com/escoladeartessinop/?locale=pt_BR" target="_blank">@escoladeartessinop</a>
         </h3>
+        <a class="topnav " href="./pages/login.html">Login</a>
     </footer>
     <script src="./js/index.js"></script>
 </body>
