--- a/frontend/pages/QuemSomos.html
+++ b/frontend/pages/QuemSomos.html
@@ -4,56 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quem somos</title>
+    <title>Quem Somos</title>
     <link rel="stylesheet" href="../css/QuemSomos.css">
 </head>
 
 <body>
-    <div>
-        <header id="cab" class="">
-            <div id="titulo" class="">
-                <h1 class="quemsomos">QUEM SOMOS</h1>
+    <header id="cab" class="">
+        <div id="menu" class="">
+            <div class="image " id="titulo">
+                <img class="logoEMA " src="../assets/logo_EMA.png" alt="" srcset="">
             </div>
-            <div id="menu" class=" ">
-                <a class="topnav " href="../index.html">Home</a>
+            <div class="pages_nav "><a class="topnav" href="../index.html">Página Inicial</a>
                 <a class="topnav " href="./QuemSomos.html">Quem Somos</a>
-                <a class="topnav " href="./Equipe.html">Equipe</a>
                 <div class="dropdown">
-                    <span class="topnav">Projetos</span>
+                    <span class="topnav ">Cursos</span>
                     <div class="dropdown-content">
-                        <a href="./projetos-concluidos.html" class="projetos">Projetos Concluidos</a><br>
-                        <a href="./projetos-em-andamento.html" class="projetos">Projetos em andamento</a><br>
-                        <a href="./projetos-futuros.html" class="projetos">Projetos Futuros</a>
+                        <a href="./cursos/ballet.html" class="cursos">Ballet</a><br>
+                        <a href="./cursos/banda_musical.html" class="cursos">Banda Musical</a><br>
+                        <a href="./cursos/banda_rudimental.html" class="cursos">Banda Rudimental</a><br>
+                        <a href="./cursos/cavaquinho.html" class="cursos">Cavaquinho</a><br>
+                        <a href="./cursos/conversacao_japonesa.html" class="cursos">Conversação Japonesa</a><br>
+                        <a href="./cursos/coral_adulto.html" class="cursos">Coral Adulto</a><br>
+                        <a href="./cursos/danca_do_ventre.html" class="cursos">Dança do Ventre</a><br>
+                        <a href="./cursos/desenho.html" class="cursos">Desenho</a><br>
+                        <a href="./cursos/espanhol.html" class="cursos">Espanhol</a><br>
+                        <a href="./cursos/flauta_doce.html" class="cursos">Flauta Doce</a><br>
+                        <a href="./cursos/musicalizacao.html" class="cursos">Musicalização</a><br>
+                        <a href="./cursos/percursao.html" class="cursos">Percursão</a><br>
+                        <a href="./cursos/pirografia.html" class="cursos">Pirografia</a><br>
+                        <a href="./cursos/teclado.html" class="cursos">Teclado</a><br>
+                        <a href="./cursos/violao.html" class="cursos">Violão</a><br>
+                        <a href="./cursos/zumba.html" class="cursos">Zumba</a><br>
                     </div>
                 </div>
-                <a class="topnav " href="../index.html">Sair</a>
             </div>
-        </header>
-    </div>
-    <div id="caixas">
-        <div class="caixatexto">
-            <h2 class="titulos">O ínicio</h2>
-            <p class="textos">Você sabia que a Caloi chegou aqui no Brasil no século XIX? Nossa história se confunde com
-                a história da bicicleta no País. Imagine quanta coisa temos para contar.</p>
         </div>
-
-        <div class="caixatexto">
-            <h2 class="titulos">1945</h2>
-            <p class="textos">A dificuldade de importar peças na época da Segunda Guerra fez com que a Caloi desse
-                início à sua produção nacional. Neste ano, foi inaugurada a primeira fábrica de bicicletas do Brasil, no
-                bairro paulistano do Brooklin.</p>
         </div>
-        <div class="caixatexto">
-            <h2 class="titulos">1989</h2>
-            <p class="textos">Em 89, chegou ao mercado a Caloi Mountain Bike 18, a primeira feita especialmente para a
-                prática do esporte que ganhou o coração do brasileiro.</p>
+    </header>
+    <main class="main">
+        <div class="divTextImage" id="div2">
+            <img id="image2" class="image" src="../assets/2image.jpg" alt="" srcset="">
+            <div class="TitleAndParagraph">
+                <h1 class="h1titulo">Escola Municipal De Artes</h1>
+                <p class="paragraphEMA">A Escola Municipal de Artes Viviane Malheiros Dal’Berto (EMA) em Sinop, Mato
+                    Grosso,
+                    é uma instituição dedicada ao ensino gratuito de diversas formas de arte.&nbsp;Atualmente, a escola
+                    atende mais de 500 alunos de todas as idades, oferecendo cursos de Ballet, Banda Musical, Banda
+                    Rudimental, Cavaquinho, Conversação Japonesa, Coral Adulto, Dança do Ventre, Desenho, Espanhol,
+                    Flauta Doce, Musicalização, Percursão, Pirografia, Teclado, Violão, Zumba</p>
+            </div>
         </div>
-    </div>
-    <footer id="footer">
-        <h3>@ 2024 Leitzke, Gabriel. All rights reserved.</h3>
+        <div class="divTextImage " id="div1">
+            <div class="TitleAndParagraph">
+                <h1 class="h1titulo">Onde estamos localizados?</h1>
+                <p class="paragraphEMA" id="endereco">Estamos localizados na Av. dos Jacarandás, 3960 - Setor Industrial, Sinop - MT,
+                    78550-362, ao lado do Assaí</p>
+            </div>
+            <iframe id="imagefront" class="image"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.743283087342!2d-55.49900209064133!3d-11.853234738276514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93a77fff298756f7%3A0xf52a77552b47f94!2sEscola%20Municipal%20de%20Artes%20-%20EMA!5e0!3m2!1spt-BR!2sbr!4v1727396532749!5m2!1spt-BR!2sbr"
+            width="80%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </main>
+    <footer>
+        <h3 class="textFooter">Entre em contato conosco: <a id="facebookEMA" href="https://api.whatsapp.com/send?phone=556696582548">(66)
+                99658-2548</a></h3>
+        <h3 class="textfooter ">Nos siga no Facebook: &nbsp;<a id="facebookEMA"
+                href="https://www.facebook.com/escoladeartessinop/?locale=pt_BR" target="_blank">@escoladeartessinop</a>
+        </h3>
+        <a class="topnav " href="./login.html">Login</a>
     </footer>
-
-    <script src="../js/QuemSomos.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
