--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,8 @@
 <body>
     <header id="cab" class="">
         <div id="menu" class="">
-            <div class="image " id="titulo">
-                <img class="logoEMA " src="./assets/logo_EMA.png" alt="" srcset="">
+            <div class="image " id="titulo"><a href="./index.html">
+                <img class="logoEMA " src="./assets/logo_EMA.png" alt="" srcset=""></a>
             </div>
             <div class="pages_nav "><a class="topnav" href="./">Página Inicial</a>
                 <a class="topnav " href="./pages/QuemSomos.html">Quem Somos</a>
@@ -46,13 +46,9 @@
             <img id="image2" class="image" src="./assets/2image.jpg" alt="" srcset="">
             <div class="TitleAndParagraph">
                 <h1 class="h1titulo">Escola Municipal De Artes</h1>
-                <p class="paragraphEMA">A Escola Municipal de Artes Viviane Malheiros Dal’Berto (EMA) em Sinop, Mato
-                    Grosso,
-                    é uma instituição dedicada ao ensino gratuito de diversas formas de arte. Atualmente, a escola
-                    atende
-                    mais de 500 alunos de todas as idades, oferecendo cursos em áreas como desenho, escaleta, flauta,
-                    balé,
-                    teclado, pirografia, musicalização, banda rudimentar, dança de salão e saxofone</p>
+                <p class="paragraphEMA">A Escola Municipal de Artes Viviane Malheiros Dal’Berto é um centro cultural de
+                    grande importância para a cidade de Sinop, Mato Grosso. Com o objetivo de democratizar o acesso à
+                    arte, a EMA oferece uma ampla variedade de cursos gratuitos para alunos de todas as idades.</p>
             </div>
         </div>
         <div class="divTextImage " id="div1">
@@ -68,7 +64,9 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
-        <h3 class="textFooter">Entre em contato conosco: (66) 99658-2548</h3>
+        <h3 class="textFooter">Entre em contato conosco: <a id="facebookEMA"
+            href="https://api.whatsapp.com/send?phone=556696582548">(66)
+            99658-2548</a></h3>
         <h3 class="textfooter ">Nos siga no Facebook: &nbsp;<a id="facebookEMA"
                 href="https://www.facebook.com/escoladeartessinop/?locale=pt_BR" target="_blank">@escoladeartessinop</a>
         </h3>
