--- a/frontend/pages/QuemSomos.html
+++ b/frontend/pages/QuemSomos.html
@@ -11,8 +11,8 @@
 <body>
     <header id="cab" class="">
         <div id="menu" class="">
-            <div class="image " id="titulo">
-                <img class="logoEMA " src="../assets/logo_EMA.png" alt="" srcset="">
+            <div class="image " id="titulo"><a href="../index.html">
+                <img class="logoEMA " src="../assets/logo_EMA.png" alt="" srcset=""></a>
             </div>
             <div class="pages_nav "><a class="topnav" href="../index.html">Página Inicial</a>
                 <a class="topnav " href="./QuemSomos.html">Quem Somos</a>
@@ -43,31 +43,53 @@
     </header>
     <main class="main">
         <div class="divTextImage" id="div2">
-            <img id="image2" class="image" src="../assets/2image.jpg" alt="" srcset="">
+            <img id="image2" class="image" src="../assets/frontEMA.jpg" alt="" srcset="">
             <div class="TitleAndParagraph">
                 <h1 class="h1titulo">Escola Municipal De Artes</h1>
-                <p class="paragraphEMA">A Escola Municipal de Artes Viviane Malheiros Dal’Berto (EMA) em Sinop, Mato
-                    Grosso,
-                    é uma instituição dedicada ao ensino gratuito de diversas formas de arte.&nbsp;Atualmente, a escola
-                    atende mais de 500 alunos de todas as idades, oferecendo cursos de Ballet, Banda Musical, Banda
-                    Rudimental, Cavaquinho, Conversação Japonesa, Coral Adulto, Dança do Ventre, Desenho, Espanhol,
-                    Flauta Doce, Musicalização, Percursão, Pirografia, Teclado, Violão, Zumba</p>
+                <p class="paragraphEMA">Escola Municipal de Artes de Sinop é um espaço de aprendizado e expressão
+                    artística que transforma vidas e fortalece o tecido social da comunidade.&nbsp; A instituição se
+                    destaca
+                    por sua oferta diversificada de cursos, que atendem aos mais variados interesses e talentos.</p>
+            </div>
+        </div>
+        <div class="divTextImage " id="div1">
+            <div class="TitleAndParagraph">
+                <h1 class="h1titulo">Cursos Oferecidos:</h1>
+                <p class="paragraphEMA" id="cursos">Artes visuais: Desenho, pirografia. <br>
+                    Música: Banda musical, banda rudimental, cavaquinho, flauta doce, musicalização, percussão, teclado,
+                    violão. <br>
+                    Dança: Ballet, dança do ventre, zumba. <br>
+                    Línguas: Conversação japonesa, espanhol. <br>
+                    Outras: Coral adulto.</p>
+            </div>
+            <img id="imagefront" class="image" src="../assets/cursos oferecidos.png"></img>
+        </div>
+        <div class="divTextImage" id="div2">
+            <img id="image3" class="image" src="../assets/impacto na sociedade.png" alt="" srcset="">
+            <div class="TitleAndParagraph">
+                <h1 class="h1titulo">Impacto na Comunidade</h1>
+                <p class="paragraphEMA">A EMA desempenha um papel fundamental na formação cultural da população
+                    sinopense. Ao oferecer uma gama tão ampla de cursos, a escola contribui para o desenvolvimento
+                    artístico e pessoal de seus alunos, promovendo a inclusão social e o enriquecimento da vida cultural
+                    da cidade.</p>
             </div>
         </div>
         <div class="divTextImage " id="div1">
             <div class="TitleAndParagraph">
                 <h1 class="h1titulo">Onde estamos localizados?</h1>
-                <p class="paragraphEMA" id="endereco">Estamos localizados na Av. dos Jacarandás, 3960 - Setor Industrial, Sinop - MT,
+                <p class="paragraphEMA" id="endereco">Estamos localizados na Av. dos Jacarandás, 3960 - Setor
+                    Industrial, Sinop - MT,
                     78550-362, ao lado do Assaí</p>
             </div>
             <iframe id="imagefront" class="image"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.743283087342!2d-55.49900209064133!3d-11.853234738276514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93a77fff298756f7%3A0xf52a77552b47f94!2sEscola%20Municipal%20de%20Artes%20-%20EMA!5e0!3m2!1spt-BR!2sbr!4v1727396532749!5m2!1spt-BR!2sbr"
-            width="80%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.743283087342!2d-55.49900209064133!3d-11.853234738276514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93a77fff298756f7%3A0xf52a77552b47f94!2sEscola%20Municipal%20de%20Artes%20-%20EMA!5e0!3m2!1spt-BR!2sbr!4v1727396532749!5m2!1spt-BR!2sbr"
+                width="80%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
     <footer>
-        <h3 class="textFooter">Entre em contato conosco: <a id="facebookEMA" href="https://api.whatsapp.com/send?phone=556696582548">(66)
+        <h3 class="textFooter">Entre em contato conosco: <a id="facebookEMA"
+                href="https://api.whatsapp.com/send?phone=556696582548">(66)
                 99658-2548</a></h3>
         <h3 class="textfooter ">Nos siga no Facebook: &nbsp;<a id="facebookEMA"
                 href="https://www.facebook.com/escoladeartessinop/?locale=pt_BR" target="_blank">@escoladeartessinop</a>
