--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,13 +51,21 @@
                     arte, a EMA oferece uma ampla variedade de cursos gratuitos para alunos de todas as idades.</p>
             </div>
         </div>
-        <div class="divTextImage " id="div1">
-            <div class="TitleAndParagraph">
-                <h1 class="h1titulo">2º titulo</h1>
-                <p class="paragraphEMA">2º parágrafo</p>
-            </div>
-            <img id="imagefront" class="image" src="./assets/frontEMA.jpg" alt="" srcset="">
+        <div id="" class="divtable table-container">
+            <table id="MeusCursos" class="Table borda">
+                <thead class="h1Table">
+                    <tr>
+                        <th>Curso:</th>
+                        <th>Turno:</th>
+                        <th>Descrição</th>
+                    </tr>
+                </thead>
+                <tbody class="paragraphTable">
+                </tbody>
+            </table>
         </div>
+        
+        
         <iframe id="maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.743283087342!2d-55.49900209064133!3d-11.853234738276514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93a77fff298756f7%3A0xf52a77552b47f94!2sEscola%20Municipal%20de%20Artes%20-%20EMA!5e0!3m2!1spt-BR!2sbr!4v1727396532749!5m2!1spt-BR!2sbr"
             width="30%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
